--- a/src/main/webapp/static/phm/css/phm2.css
+++ b/src/main/webapp/static/phm/css/phm2.css
@@ -119,10 +119,12 @@ html,body{
     margin: 0 auto;
 }
 .currentState>div:nth-child(1){
+    position: relative;
     width: 40%;
     height: 100%;
 }
 .currentState>div:nth-child(2),.currentState>div:nth-child(3){
+    position: relative;
     width: 30%;
     height: 100%;
 }
@@ -131,36 +133,80 @@ html,body{
 }
 .currentState_leftTitle{
     position: relative;
+    padding: 5% 12%;
     height: 100%;
-    background-color: #000;
+    /* background-color: red; */
 }
+
+.boxTitle1{
+    position: relative;
+    width: 40%;
+    top: 2%;
+    background:url("../images/system/currentStatus.png") no-repeat;
+    background-size: 70% 100%;
+}
+.boxTitle2{
+    position:relative;
+    bottom: 0;
+    background:url("../images/system/currentStatus.png") no-repeat;
+    background-size: 90% 100%;
+}
+.boxTitle1 span{
+    position: absolute;
+    width: 40%;
+    left: 15%;
+    top: 5%;
+    font-size: 1em;
+
+    /* top: 0.2em; */
+}
+.boxTitle2 span{
+    position: absolute;
+    left: 50%;
+    width: 70%;
+    margin-left: -38%;
+    top: 5%;
+    font-size: 1em;
+}
+
+.imgbox{
+    position: relative;
+    height: 20%;
+    width: 100%;
+    /* background:url("../images/system/currentStatus.png") no-repeat; */
+}
+
+.currentState_leftTitle ul li{
+    position: relative;
+    left: 8%;
+    list-style: none;
+    padding: 2% 0;
+    font-size: 0.8em;
+}
+.currentState_leftTitle ul li a{
+    color: #ff9f30;
+    font-size: 1.1em;
+}
+.currentState_leftTitle ul li i{
+    color: #ff9f30;
+    font-size: 0.7em;
+}
+
+
+/* list 冰冷 洗涤 */
 .leftContentList .lists .listsUp{
     height: 50%;
     
 }
 .leftContentList .lists .listsMiddle,.leftContentList .lists .listsDown{
     height: 25%;
-    /* background-color:red; */
-    /* background-color: #000; */
-}
-.imgbox{
-    position: relative;
-    height: 20%;
-    width: 100%;
-    /* background-color: red;    */
-}
-.imgbox span{
-    text-align: center;
 }
 
-.currentState_leftTitle span{
-    /* position: absolute; */
-    display: block;
-}
 .leftContentList{
     width: 92%;
-    height: 60%;
+    height: 59%;
     margin: 0 auto;
+    /* left: 15%; */
     /* background-color: pink; */
 }
 .leftContentList .lists{
@@ -172,16 +218,20 @@ html,body{
 
 .imgboxContent{
     position: relative;
-    height: 80%;
+    width: 20%;
+    height: 100%;
+    margin: 0 auto;
 }
 .imgboxContent img{
     position: relative;
     top: 0.3em;
     left: 50%;
-    margin-left: -10%;
-    width: 20%;
-    height: 70%;
+    margin-left: -25%;
+    width: 50%;
+    height: 50%;
 }
+
+
 .info{
     width: 100%;
     
@@ -195,8 +245,9 @@ html,body{
     /* margin-bottom: 0.2em; */
 }
 .txt1{
-    font-size: 1.1em;
-    margin:0.3em 0;
+    font-size: 0.8em;
+    /* margin:0.4em 0; */
+    padding: 0.4em 0;
     /* color: red; */
 }
 .txt3, .txt5{
